--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,38 +27,16 @@ services:
     image: redis:7
     container_name: flowdock_redis
     restart: always
-    ports:
-      - "6379:6379"
     volumes:
       - redisdata:/data
     networks:
-      - flowdock_public
+      - nginx_network
       - flowdock_internal
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
-
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: flowdock_pgadmin
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-      PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION: "False"
-      PGADMIN_CONFIG_COOKIE_DEFAULT_SECURE: "False"
-      PGADMIN_CONFIG_COOKIE_SAMESITE: "'Lax'"
-      GUNICORN_TIMEOUT: "120"
-    ports:
-      - "5050:80"
-    networks:
-      - flowdock_public
-      - flowdock_internal
-    depends_on:
-      postgres:
-        condition: service_healthy
 
   # -----------------------------------------------------------------
   # FRONTEND & BACKEND
@@ -74,7 +52,8 @@ services:
       - VITE_AUTH_API_URL=/auth
       - VITE_MEDIA_API_URL=/media
     networks:
-      - flowdock_public
+      - nginx_network
+      - flowdock_internal
     depends_on:
       - auth_service
 
@@ -84,6 +63,8 @@ services:
       dockerfile: Dockerfile
     container_name: flowdock_auth_service
     restart: always
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -92,7 +73,7 @@ services:
       POSTGRES_PORT: 5432
       JWT_SECRET: "secret"
       JWT_ALGORITHM: "HS256"
-      REDIS_HOST: redis
+      REDIS_HOST: host.docker.internal
       REDIS_PORT: 6379
       SMTP_HOST: "smtp.gmail.com"
       SMTP_PORT: "587"
@@ -102,14 +83,14 @@ services:
       SMTP_FROM_NAME: "FlowDock"
       GOOGLE_CLIENT_ID: ""
       GOOGLE_CLIENT_SECRET: ""
-      BACKEND_URL: "http://localhost:8000"
-      FRONTEND_URL: "http://localhost:5173"
+      BACKEND_URL: "http://flowdock_auth_service:8000"
+      FRONTEND_URL: "http://flowdock_frontend:5173"
     ports:
       - "8000:8000"
     volumes:
       - pipcache:/root/.cache/pip
     networks:
-      - flowdock_public
+      - nginx_network
       - flowdock_internal
     depends_on:
       postgres:
@@ -141,7 +122,7 @@ services:
     ports:
       - "9090:9090"
     networks:
-      - flowdock_public
+      - nginx_network
       - flowdock_internal
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9090/-/healthy"]
@@ -167,7 +148,7 @@ services:
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
     networks:
-      - flowdock_public
+      - nginx_network
       - flowdock_internal
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
@@ -185,8 +166,6 @@ volumes:
   grafana_data:
 
 networks:
-  flowdock_public:
-    driver: bridge
   flowdock_internal:
     driver: bridge
     internal: true
@@ -194,4 +173,4 @@ networks:
     driver: bridge
   nginx_network:
     external: true
-    #
+
