--- a/nginx.conf
+++ b/nginx.conf
@@ -54,6 +54,17 @@ http {
         }
 
         # ----------------------------------------------------
+        # 2b. API USERS (/api/users)
+        # ----------------------------------------------------
+        location /api/users/ {
+            # Route to auth_service for user endpoints
+            proxy_pass http://auth_service/api/users/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # ----------------------------------------------------
         # 3. GRAFANA (/grafana)
         # ----------------------------------------------------
         location /grafana/ {
