--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,4 @@
+
 events {
     worker_connections 1024;
 }
@@ -6,20 +7,15 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # Basic Settings
-    sendfile on;
-    keepalive_timeout 65;
-
-    # Upstream definitions (using container names from your compose file)
     upstream frontend {
         server flowdock_frontend:5173;
     }
     upstream auth_service {
         server flowdock_auth_service:8000;
     }
-    upstream grafana {
-        server flowdock_grafana:3000;
-    }
+    # upstream grafana {
+    #     server flowdock_grafana:3000;
+    # }
     upstream pgadmin {
         server flowdock_pgadmin:80;
     }
@@ -31,9 +27,39 @@ http {
         listen 80;
         server_name localhost;
 
+# ----------------------------------------------------
+        # 1. API ROUTING (Fixed)
         # ----------------------------------------------------
-        # 1. FRONTEND (Root)
+        location /api/ {
+            # DELETE THIS LINE: rewrite ^/api/(.*) /$1 break; 
+            
+            # Send the FULL URL (e.g., /api/users/123) to the backend
+            proxy_pass http://auth_service;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+# ----------------------------------------------------
+        # 2. AUTH SERVICE (/auth)
         # ----------------------------------------------------
+        location /auth/ {
+            # REMOVED the trailing slash below 👇
+            proxy_pass http://auth_service; 
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # --- 3. STATIC ASSETS (Fonts/Images) ---
+        location /assets/ {
+            proxy_pass http://frontend;
+            expires 30d;
+        }
+
+        # --- 4. FRONTEND ---
         location / {
             proxy_pass http://frontend;
             proxy_http_version 1.1;
@@ -42,63 +68,25 @@ http {
             proxy_set_header Host $host;
         }
 
-        # ----------------------------------------------------
-        # 2. AUTH SERVICE (/auth)
-        # ----------------------------------------------------
-        location /auth/ {
-            # Trailing slash '/' at end of proxy_pass strips the '/auth/' prefix
-            proxy_pass http://auth_service/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+        # --- 5. TOOLS ---
+        # location /grafana/ {
+        #     rewrite  ^/grafana/(.*)  /$1 break;
+        #     proxy_pass http://grafana;
+        #     proxy_set_header Host $host;
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection "upgrade";
+        # }
 
-        # ----------------------------------------------------
-        # 2b. API USERS (/api/users)
-        # ----------------------------------------------------
-        location /api/users/ {
-            # Route to auth_service for user endpoints
-            proxy_pass http://auth_service/api/users/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        # ----------------------------------------------------
-        # 3. GRAFANA (/grafana)
-        # ----------------------------------------------------
-        location /grafana/ {
-            proxy_pass http://grafana/;
-            
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # WebSocket support (Crucial for Grafana Live)
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        # ----------------------------------------------------
-        # 4. PGADMIN (/pgadmin)
-        # ----------------------------------------------------
         location /pgadmin/ {
             proxy_pass http://pgadmin/;
-            
-            # PGAdmin SPECIFIC: Tells the app it is running under a subpath
             proxy_set_header X-Script-Name /pgadmin;
             proxy_set_header Host $host;
             proxy_redirect off;
         }
 
-        # ----------------------------------------------------
-        # 5. PROMETHEUS (/prometheus)
-        # ----------------------------------------------------
         location /prometheus/ {
             proxy_pass http://prometheus/;
-            proxy_set_header Host $host;
         }
     }
 }
