--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,20 @@
 services:
+  # --- GATEWAY (NGINX) ---
+  nginx:
+    image: nginx:latest
+    container_name: flowdock_gateway
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    networks:
+      - flowdock_public
+    depends_on:
+      - frontend
+      - auth_service
 
-  # -----------------------------------------------------------------
-  # DATABASE & CACHE
-  # -----------------------------------------------------------------
+  # --- DATABASES ---
   postgres:
     image: postgres:16
     container_name: flowdock_postgres
@@ -27,20 +39,37 @@ services:
     image: redis:7
     container_name: flowdock_redis
     restart: always
+    ports:
+      - "6379:6379"
     volumes:
       - redisdata:/data
     networks:
-      - nginx_network
       - flowdock_internal
+      - flowdock_public
+    # 👇 ADD THIS BLOCK BACK 👇
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  # -----------------------------------------------------------------
-  # FRONTEND & BACKEND
-  # -----------------------------------------------------------------
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: flowdock_pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - flowdock_public
+      - flowdock_internal
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+  # --- APP SERVICES ---
   frontend:
     build:
       context: ./frontend/frontend
@@ -48,12 +77,11 @@ services:
     container_name: flowdock_frontend
     restart: always
     environment:
-      # Nginx routes /auth -> auth_service
-      - VITE_AUTH_API_URL=/auth
+      # Points to the Nginx routes we defined above
+      - VITE_AUTH_API_URL=/api
       - VITE_MEDIA_API_URL=/media
     networks:
-      - nginx_network
-      - flowdock_internal
+      - flowdock_public
     depends_on:
       - auth_service
 
@@ -63,50 +91,37 @@ services:
       dockerfile: Dockerfile
     container_name: flowdock_auth_service
     restart: always
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: FlowDock
-      POSTGRES_HOST: postgres
-      POSTGRES_PORT: 5432
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
       JWT_SECRET: "secret"
       JWT_ALGORITHM: "HS256"
-      REDIS_HOST: host.docker.internal
-      REDIS_PORT: 6379
       SMTP_HOST: "smtp.gmail.com"
       SMTP_PORT: "587"
       SMTP_USER: "flowdockproduction@gmail.com"
       SMTP_PASSWORD: "hmlz qbkb rbbb npja"
       SMTP_FROM_EMAIL: "flowdockproduction@gmail.com"
       SMTP_FROM_NAME: "FlowDock"
-      GOOGLE_CLIENT_ID: ""
-      GOOGLE_CLIENT_SECRET: ""
-      BACKEND_URL: "http://flowdock_auth_service:8000"
-      FRONTEND_URL: "http://flowdock_frontend:5173"
+      # Localhost URLs for testing
+      BACKEND_URL: "http://localhost"
+      FRONTEND_URL: "http://localhost"
     ports:
       - "8000:8000"
-    volumes:
-      - pipcache:/root/.cache/pip
     networks:
-      - nginx_network
+      - flowdock_public
       - flowdock_internal
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 15s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
 
-  # -----------------------------------------------------------------
-  # MONITORING
-  # -----------------------------------------------------------------
+  # --- MONITORING ---
   prometheus:
     image: prom/prometheus:latest
     container_name: flowdock_prometheus
@@ -114,63 +129,38 @@ services:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.external-url=/prometheus'
-      - '--web.route-prefix=/'
     ports:
       - "9090:9090"
     networks:
-      - nginx_network
+      - flowdock_public
       - flowdock_internal
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9090/-/healthy"]
-      interval: 15s
-      timeout: 10s
-      retries: 3
 
-  grafana:
-    image: grafana/grafana:latest
-    container_name: flowdock_grafana
-    restart: always
-    environment:
-      GF_SECURITY_ADMIN_PASSWORD: admin
-      GF_SECURITY_ADMIN_USER: admin
-      GF_INSTALL_PLUGINS: grafana-clock-panel
-      GF_USERS_ALLOW_SIGN_UP: "false"
-      GF_SERVER_ROOT_URL: http://localhost/grafana
-      GF_SERVER_SERVE_FROM_SUB_PATH: "true"
-    ports:
-      - "3000:3000"
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-    networks:
-      - nginx_network
-      - flowdock_internal
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
-      interval: 15s
-      timeout: 10s
-      retries: 3
+  # grafana:
+  #   image: grafana/grafana:latest
+  #   container_name: flowdock_grafana
+  #   restart: always
+  #   environment:
+  #     GF_SECURITY_ADMIN_PASSWORD: admin
+  #     GF_SERVER_ROOT_URL: http://localhost/grafana
+  #     GF_SERVER_SERVE_FROM_SUB_PATH: "true"
+  #   ports:
+  #     - "3000:3000"
+  #   volumes:
+  #     - grafana_data:/var/lib/grafana
+  #   networks:
+  #     - flowdock_public
+  #     - flowdock_internal
 
 volumes:
   pgdata:
   redisdata:
-  mongodata:
-  rabbitmqdata:
-  pipcache:
   prometheus_data:
   grafana_data:
+  pipcache:
 
 networks:
+  flowdock_public:
+    driver: bridge
   flowdock_internal:
     driver: bridge
     internal: true
-  flowdock_network:
-    driver: bridge
-  nginx_network:
-    external: true
-
