added uv as a package manager for python projects

--- a/.gitignore
+++ b/.gitignore
@@ -19300,3 +19300,26 @@ backend/auth_service/app/core/__pycache__/config.cpython-313.pyc
 docker-compose.yml
 nginx.conf
 docker-compose.yml
+backend/auth_service/CLASSES_REFERENCE.md
+backend/auth_service/CLEAN_ARCHITECTURE_GUIDE.md
+backend/auth_service/COMPLETION_CHECKLIST.md
+backend/auth_service/DELIVERABLES.txt
+backend/auth_service/CLASSES_REFERENCE.md
+backend/auth_service/CLEAN_ARCHITECTURE_GUIDE.md
+backend/auth_service/COMPLETION_CHECKLIST.md
+backend/auth_service/DELIVERABLES.txt
+backend/auth_service/CLASSES_REFERENCE.md
+backend/auth_service/CLEAN_ARCHITECTURE_GUIDE.md
+backend/auth_service/COMPLETION_CHECKLIST.md
+backend/auth_service/DELIVERABLES.txt
+backend/auth_service/CLASSES_REFERENCE.md
+backend/auth_service/CLEAN_ARCHITECTURE_GUIDE.md
+backend/auth_service/COMPLETION_CHECKLIST.md
+backend/auth_service/DELIVERABLES.txt
+backend/auth_service/CLASSES_REFERENCE.md
+backend/auth_service/CLEAN_ARCHITECTURE_GUIDE.md
+backend/auth_service/COMPLETION_CHECKLIST.md
+backend/auth_service/DELIVERABLES.txt
+.python-version
+main.py
+uv.lock
