--- a/nginx.conf
+++ b/nginx.conf
@@ -13,12 +13,12 @@ http {
     upstream auth_service {
         server flowdock_auth_service:8000;
     }
+    upstream media_service {
+        server flowdock_media_service:8000;
+    }
     # upstream grafana {
     #     server flowdock_grafana:3000;
     # }
-    upstream pgadmin {
-        server flowdock_pgadmin:80;
-    }
     upstream prometheus {
         server flowdock_prometheus:9090;
     }
@@ -45,21 +45,38 @@ http {
         # 2. AUTH SERVICE (/auth)
         # ----------------------------------------------------
         location /auth/ {
-            # REMOVED the trailing slash below 👇
-            proxy_pass http://auth_service; 
+            proxy_pass http://auth_service/;
             
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # --- 3. STATIC ASSETS (Fonts/Images) ---
+# ----------------------------------------------------
+        # 3. MEDIA SERVICE (/media)
+        # ----------------------------------------------------
+        location /media/ {
+            proxy_pass http://media_service;
+            
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            # Allow large file uploads
+            client_max_body_size 1000M;
+            
+            # Streaming support
+            proxy_buffering off;
+            proxy_request_buffering off;
+        }
+
+        # --- 4. STATIC ASSETS (Fonts/Images) ---
         location /assets/ {
             proxy_pass http://frontend;
             expires 30d;
         }
 
-        # --- 4. FRONTEND ---
+        # --- 5. FRONTEND ---
         location / {
             proxy_pass http://frontend;
             proxy_http_version 1.1;
@@ -68,7 +85,7 @@ http {
             proxy_set_header Host $host;
         }
 
-        # --- 5. TOOLS ---
+        # --- 6. TOOLS ---
         # location /grafana/ {
         #     rewrite  ^/grafana/(.*)  /$1 break;
         #     proxy_pass http://grafana;
@@ -76,14 +93,6 @@ http {
         #     proxy_http_version 1.1;
         #     proxy_set_header Upgrade $http_upgrade;
         #     proxy_set_header Connection "upgrade";
-        # }
-
-        location /pgadmin/ {
-            proxy_pass http://pgadmin/;
-            proxy_set_header X-Script-Name /pgadmin;
-            proxy_set_header Host $host;
-            proxy_redirect off;
-        }
 
         location /prometheus/ {
             proxy_pass http://prometheus/;
